<resources>
    <string name="app_name">Eventos Sicredi</string>
    <!--Global Strings-->
    <string name="global_try_again">Tente novamente</string>
    <string name="global_ok">OK</string>
    <string name="global_cancel">Cancelar</string>
    <!--Error Strings-->
    <string name="error_title">Oops!</string>
    <string name="error_bad_request">Não foi possivel realizar operação. Requisição inválida</string>
    <string name="error_unauthorized">Não foi possivel realizar operação. Você não está autorizado</string>
    <string name="error_forbidden">Você não pode realizar a operação</string>
    <string name="error_not_found">Operação não encontrada</string>
    <string name="error_timeout">Não foi possivel realizar operação. Verifique sua conexão</string>
    <string name="error_unprocessable_entity">Não foi possivel realizar operação. Verifique suas informações</string>
    <string name="error_too_many_requests">Limite de requisições atingida. Tente novamente mais tarde</string>
    <string name="error_internal_server_error">Houve um erro interno. Tente novamente mais tarde</string>
    <string name="error_bad_gateway">Houve um erro interno. Tente novamente mais tarde</string>
    <string name="error_gateway_timeout">Houve um erro interno. Tente novamente mais tarde</string>
    <string name="error_default">Não foi possível realizar a operação! Tente novamente.</string>
    <!--List Events-->
    <string name="choose_your_event">Escolha seu evento!</string>
    <string name="empty_list_helper_text">Não foi possível carregar os eventos! :(\n\n Verifique sua conexão e tente novamente</string>
    <!--Event Details-->
    <string name="description_label">Descrição</string>
    <string name="share_event_description">Que tal me acompanhar nesse evento do Sicredi?\n%s em %s</string>
    <string name="share_event_send_to">Enviar evento para</string>
    <string name="price_label">Preço</string>
    <string name="do_check_in">Fazer Check-in</string>
    <string name="date_description_template">%s, %2d de %s</string>
    <string name="money_template">R$ %.2f</string>
    <!--Event Check-In-->
    <string name="check_in_title">Check in</string>
    <string name="user_info_dialog_title">Continuar com suas informações?</string>
    <string name="user_info_dialog_description">Nome\n%s\n\nEmail\n%s</string>
    <string name="user_info_dialog_keep_info">Continuar</string>
    <string name="user_info_dialog_change_info">Mudar informações</string>
    <string name="check_in_info_explanation">Preencha as informações para prosseguir com o check-in</string>
    <string name="check_in_name_hint">Informe seu nome</string>
    <string name="check_in_email_hint">Informe seu email</string>
    <string name="check_in_location_hint">Localização</string>
    <string name="check_in_email_error">E-mail inválido</string>
    <string name="check_in_name_error">Por favor, insira seu nome</string>
    <string name="check_in_save_info_error">Não foi possível salvar suas informações</string>
    <string name="check_in_save_info_success">Informações salvas com sucesso!</string>
    <string name="check_in_submit_info">Submeter informações</string>
    <string name="check_in_done">Check in realizado com sucesso!</string>

    <!--maps key-->
    <string name="maps_api_key">AIzaSyDOb5LSy_DXyWbsRGybifAPaLBgFgb_57I</string>
</resources>
