...
                        app:layout_constraintTop_toBottomOf="@id/text_view_location_hint"
                        app:uiScrollGestures="false"
                        app:uiZoomGestures="false"
                        tools:layout_editor_absoluteX="16dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/button_make_check_in"
                        android:layout_width="0dp"
                        android:layout_height="42dp"
                        android:layout_marginHorizontal="48dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginBottom="16dp"
                        android:insetTop="0dp"
...
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/google_map"
                        app:strokeColor="@color/colorOffWhite"
                        app:strokeWidth="1dp" />

                    <TextView
                        android:id="@+id/text_view_check_in_done"
                        style="@style/TextAppearance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:text="@string/check_in_done"
                        android:visibility="gone"
...
